# ray_tracer

./: .cirrus.yml  .gitignore  AGENTS.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: build_and_test.yml  check_formatting.yml  check_gallery_completeness.yml
animations/: teapot_orbit.toml  teapot_spin.toml
benches/: simple_world.rs  teapot.rs
scenes/: area_light.toml  multiple_lights.toml  soft_shadow_teapot.toml  spotlight.toml  spotlight_narrow.toml  spotlight_side.toml  spotlight_wide.toml
scripts/: check_gallery.sh  make_gif.sh
src/: bounds.rs  camera.rs  canvas.rs  color.rs  intersection.rs  intersections.rs  lib.rs  lighting.rs  lights.rs  main.rs  material.rs  matrix.rs  obj_file.rs  patterns.rs  plane.rs  ray.rs  scene_file.rs  sequences.rs  shape.rs  sphere.rs  test_helpers.rs  transformation.rs  tuple.rs  uv.rs  world.rs
tests/: render_area_light_test.rs  render_basic_shapes_test.rs  render_cover_test.rs  render_csg_test.rs  render_cubes_test.rs  render_cylinders_test.rs  render_dice_test.rs  render_hexagon_test.rs  render_multiple_lights_test.rs  render_obj_models_test.rs  render_obj_teapot_test.rs  render_pattern_test.rs  render_reflection_and_refraction_test.rs  render_scene_file_test.rs  render_simple_world.rs  render_spotlight_test.rs  render_texture_mapping_test.rs  shared_test_helpers.rs  simple_circle_test.rs  simple_sphere_test.rs
tests/fixtures/: checkered_sphere.ppm  gradient_sphere.ppm  ring_sphere.ppm  simple_circle_test.ppm  simple_sphere_test.ppm  simple_world_test.ppm  stripe_sphere.ppm  (+4 more)
textures/: earth.ppm
(+7 files in other folders)
