[package]
name = "ray_tracer"
version = "0.1.0"
authors = ["Douglas Anderson <hockeybuggy@gmail.com>"]
edition = "2024"
license = "MIT"

# The render tests are compute heavy (the OBJ models especially), so build
# tests and the library they link against with optimizations.
[profile.test]
opt-level = 2

[profile.dev]
opt-level = 2

[dependencies]
assert_approx_eq = "1.1.0"
criterion = "0.8"
image = "0.25.10"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[[bench]]
name = "simple_world"
harness = false
